# StockIntelligence

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: create_python_release.yml  create_tag_trigger_release.yml  data_ingestion_big_query.yml  python-code-test-uv.yml  python-code-test.yml
DataLoad/: data_ingestion_multi_big_query.py
StockIntelligence/: StockDataClass.py  get_stock_data.py  load_multi_stock_data.py  load_stock_data.py  stock_data_abstract.py  technical_analysis.py
StockIntelligence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
StockIntelligence/abstract/: stock_data_abstract.py
StockIntelligence/db_utility/: big_query_setup.py  logger.py
tests/: test_data_load.py  test_multi_data_load.py
